--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="navbar navbar-expand-lg sticky-top " id="cabecalho">
          <div class="container">
-             <h1 class="navbar-brand m-0 section-title "><img src="./imagens/tomatão.png"   alt="tomate"></h1>
+             <h1 class="navbar-brand m-0 section-title "><img src="./imagens/tomatao1.png"   alt="tomate"></h1>
              <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
                  <span class="navbar-toggler-icon"  ></span>
              </button>
@@ -55,13 +55,13 @@
             <div class="carousel slide" data-bs-ride="carousel" id="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="3000">
-                        <img src="./imagens/s1.png" class=" w-100 rounded"   alt="foto-espaço-interno-do-restaurante">
+                        <img src="./imagens/sli1.png" class=" w-100 rounded"   alt="foto-espaço-interno-do-restaurante">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="./imagens/s2.png"  class=" w-100 rounded" alt="Duas taças de vinho">
+                        <img src="./imagens/sli2.png"  class=" w-100 rounded" alt="Duas taças de vinho">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="./imagens/s3.png"  class="  w-100 rounded"  alt="Uma mesa com comida">
+                        <img src="./imagens/sli3.png"  class="  w-100 rounded"  alt="Uma mesa com comida">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -81,7 +81,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-5">
-                    <img src="./imagens/tomate.png" class="d-block w-100 rounded " alt="foto do espaço interno do restaurante">
+                    <img src="./imagens/tomate2.png" class="d-block w-100 rounded " alt="foto do espaço interno do restaurante">
                     </div>
                     <div class="col-md-7 mt-3 mt-md-0" >
                     <h2 class="section-title2 text-colored fs-1">Sobre a pizzaria</span></h2>
@@ -202,21 +202,21 @@
                         <div class="tab-pane " id="entradas">
                             <div class="row">
                                 <div class="col-md-3">
-                                    <img class="d-block w-100" src="imagens/entrada/a3.png" alt="canoa-portuguesa">
+                                    <img class="d-block w-100" src="imagens/entrada/entrada3.png" alt="canoa-portuguesa">
                                     <h5 class="text-colored fs-4 mt-2 section-title">Canoa Portuguesa</h5>
                                     <p>
                                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     </p>
                                 </div>
                                 <div class="col-md-3">
-                                    <img class="d-block w-100" src="imagens/entrada/a2.png" alt="conchida-portuguesa">
+                                    <img class="d-block w-100" src="imagens/entrada/entrada2.png" alt="conchida-portuguesa">
                                     <h5 class="text-colored fs-4 mt-2 section-title">Conchinha Portuguesa</h5>
                                     <p>
                                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     </p>
                                 </div>
                                 <div class="col-md-3">
-                                    <img class="d-block w-100" src="imagens/entrada/a1.png" alt="coxinha-de-frango">
+                                    <img class="d-block w-100" src="imagens/entrada/entrada1.png" alt="coxinha-de-frango">
                                     <h5 class="text-colored fs-4 mt-2 section-title">Coxinha de frango</h5>
                                     <p>
                                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -227,21 +227,21 @@
                         <div class="tab-pane " id="pratos-principais">
                             <div class="row">
                                 <div class="col-md-3">
-                                    <img class="d-block w-100" src="imagens/comida/pizza-1.png" alt="pizza-de-calabresa">
+                                    <img class="d-block w-100" src="imagens/comida/pizza1.png" alt="pizza-de-calabresa">
                                     <h5 class="text-colored fs-4 mt-2 section-title">Pizza de Calabresa</h5>
                                     <p>
                                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     </p>
                                 </div><!--col-md-3--->
                                 <div class="col-md-3">
-                                    <img class="d-block w-100" src="imagens/comida/pizza-2.png" alt="Pizza-de-Portuguesa">
+                                    <img class="d-block w-100" src="imagens/comida/pizza2.png" alt="Pizza-de-Portuguesa">
                                     <h5 class="text-colored fs-4 mt-2 section-title">Pizza de Portuguesa</h5>
                                     <p>
                                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     </p>
                                 </div><!--col-md-3--->
                                 <div class="col-md-3">
-                                    <img class="d-block w-100" src="imagens/comida/1.png" alt="pizza">
+                                    <img class="d-block w-100" src="imagens/comida/sushi1.png" alt="pizza">
                                     <h5 class="text-colored fs-4 mt-2 section-title">Suchi</h5>
                                     <p>
                                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -252,21 +252,21 @@
                         <div class="tab-pane " id="Sobremesas">
                             <div class="row">
                                 <div class="col-md-3">
-                                    <img class="d-block w-100" src="imagens/sobremesa/so1.png" alt="bolo-de-chocolate">
+                                    <img class="d-block w-100" src="imagens/sobremesa/sob1.png" alt="bolo-de-chocolate">
                                     <h5 class="text-colored fs-4 mt-2 section-title">Croissant  de Chocolate</h5>
                                     <p>
                                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     </p>
                                 </div><!--col-md-3--->
                                 <div class="col-md-3">
-                                    <img class="d-block w-100" src="imagens/sobremesa/so2.png" alt="cupcake">
+                                    <img class="d-block w-100" src="imagens/sobremesa/sob2.png" alt="cupcake">
                                     <h5 class="text-colored fs-4 mt-2 section-title">Acaí</h5>
                                     <p>
                                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     </p>
                                 </div><!--col-md-3--->
                                 <div class="col-md-3">
-                                    <img class="d-block w-100" src="imagens/sobremesa/so3.png" alt="bolo-de-chocolate">
+                                    <img class="d-block w-100" src="imagens/sobremesa/sob3.png" alt="bolo-de-chocolate">
                                     <h5 class="text-colored fs-4 mt-2 section-title">Bolo de Negresco</h5>
                                     <p>
                                         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
